<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Protivity</string>
    <string name="hello_world">Project lists go in this screen.</string>
    <string name="menu_settings">Settings</string>
    <string name="password_reset">Change password</string>
    <string name="pwd_old">Current password</string>
    <string name="pwd_new">New password</string>
    <string name="pwd_confirm">Confirm password</string>
    <string name="pwd_button">Confirm</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="password_no_match">Confirmation doesn\'t match.</string>
    <string name="password_not_new">Same as current password , please use a different one</string>
    <string name="title_activity_login">Login</string>
    <string name="menu_logoff">Log Off</string>
    <string name="exit_confirmation">Exit Protivity?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit">Exit</string>
    <string name="success">Success</string>
    <string name="password_change_success">Password was successfully changed.</string>
    <string name="title_activity_task_list">TaskList</string>
    <string name="network_error">Network Error</string>
    <string name="network_error_message">No network connection detected. Please connect your device and retry.</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="title_activity_project_info">ProjectInfoActivity</string>
    <string name="title_activity_task">Active Task</string>
    <string name="title_activity_task_completed">Completed Task</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_success">Success, Password changed</string>
    <string name="change_password_fail">Incorrect password</string>
    <string name="string_requirement">Must contain upper &amp; lowercase characters, numbers, special chars. Min. of 8 characters</string>
    <string name="menu_sync">Sync</string>
    <string name="prompt_servername">Server</string>
    <string name="title_image_description">This is the image for the logo</string>
    <string name="project_name">Project Name</string>
    <string name="project_brief">Brief</string>
    <string name="project_date_created">Date Created</string>
    <string name="project_date_due">Due Date</string>
    <string name="new_task">Add New Task</string>
    <string name="title_activity_create_task">Create New Task</string>
    <string name="create_task">Create Task</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Description</string>
    <string name="task_due_date">Due Date:</string>
    <string name="category_prompt">Category:</string>
    <string-array name="category">
        <item>TODO</item>
        <item>Meeting</item>
        <item>Contact</item>
        <item>Other</item>
    </string-array>
    <string name="members_prompt">Members:</string>
    <string name="importance_prompt">Importance:</string>
    <string name="no_active_tasks">No active tasks</string>
    <string name="no_completed_tasks">No completed tasks</string>
    <string name="project_list_title">Projects</string>
    <string name="invalid_email">Incorrect email format</string>
    <string name="project_member">Other Member(s)</string><string name="member_email">Email</string>
    <string name="member_phone">Call/Text</string>
    <string name="member_contact">Contact</string>
    <string name="member_role">Role</string>
    <string name="send_sms">Send SMS</string>
    <string name="task_importance">Importance Level</string>
    <string name="task_category">Category</string><string name="button_update">Update</string><string name="button_complete">Complete</string><string name="title_activity_update">Update Task</string>
    <string name="orderby_date">Order by: Date</string>
    <string name="orderby_importance">Order by: Importance</string>
    <string name="sms_confirm">Confirm sending message?</string>
    <string name="confirm">Confirmation</string>
    <string name="no_active_projects">No active projects</string>
    <string name="no_completed_projects">No completed projects</string>
    <string name="activity_member_info_title">Member Info</string>
    <string name="role">Role</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="message">Message:</string>
    <string name="call_button">Call member button</string>
    <string name="email_button">Email member button</string>
    <string name="sms_button">SMS member button</string>
    
</resources>