<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTaskActivity" >
        
        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical" >
           
        		
			<EditText
            	android:id="@+id/task_name"
                android:layout_width="250dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/task_name"
                android:maxLines="1"
                android:singleLine="true" />
			
			<EditText
            	android:id="@+id/task_description"
                android:layout_width="250dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:hint="@string/task_description"
                android:maxLines="1"
                android:singleLine="true" />
            
			<TextView
            	android:id="@+id/category_prompt"
            	android:layout_width="230dp"
            	android:layout_height="wrap_content"
            	android:layout_gravity="center"
            	android:layout_marginTop="18dp"
            	android:singleLine="true"
            	android:text="@string/category_prompt"
            	android:textSize="18sp" />
			
			<Spinner
        		android:id="@+id/spinner"
        		android:layout_width="250dp"
        		android:layout_height="wrap_content"
        		android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
        		android:entries="@array/category"
        		android:prompt="@string/category_prompt" />
            
            <TextView
            	android:id="@+id/duedate_prompt"
            	android:layout_width="230dp"
            	android:layout_height="wrap_content"
            	android:layout_gravity="center"
            	android:layout_marginTop="18dp"
            	android:singleLine="true"
            	android:text="@string/task_due_date"
            	android:textSize="18sp" />
            
            <TextView
            	android:id="@+id/members_prompt"
            	android:layout_width="230dp"
            	android:layout_height="wrap_content"
            	android:layout_gravity="center"
            	android:layout_marginTop="18dp"
            	android:singleLine="true"
            	android:text="@string/members_prompt"
            	android:textSize="18sp" />
            
            <TextView
            	android:id="@+id/importance_prompt"
            	android:layout_width="230dp"
            	android:layout_height="wrap_content"
            	android:layout_gravity="center"
            	android:layout_marginTop="18dp"
            	android:singleLine="true"
            	android:text="@string/importance_prompt"
            	android:textSize="18sp" />
            <SeekBar android:id="@+id/seekbar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:max="2"
				android:layout_gravity="center"
				android:minWidth="150dp"  />
            <Button
                android:id="@+id/create_task_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:background="#5081b3"
                android:textColor="#FFF"
                android:text="@string/create_task" />

        </LinearLayout>
</ScrollView>