<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ChangePassword" >
    
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtOldPwd"
        android:layout_alignRight="@+id/txtOldPwd"
        android:layout_marginTop="32dp"
        android:hint="@string/prompt_username"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />

    <Button
        android:id="@+id/btnChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtConfirmPwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
         android:onClick="changePassword"
        android:text="@string/pwd_button" />

    <EditText
        android:id="@+id/txtConfirmPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtNewPwd"
        android:layout_below="@+id/txtNewPwd"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/pwd_confirm"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtNewPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtOldPwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/pwd_new"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/txtOldPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtNewPwd"
        android:layout_below="@+id/username"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/pwd_old"
        android:inputType="textPassword" />

</RelativeLayout>